Updated the profile section vertical positioning to center or larger screens + added scroll-margin-top to the projects section id to ensure that the title is not covered on

--- a/styles.css
+++ b/styles.css
@@ -302,7 +302,7 @@ body #about {
 /* PROJECTS SECTION */
 
 #projects {
-   scroll-margin-top: 70px;  /* Adjust this value based on the height of your fixed header or nav bar */
+   scroll-margin-top: 75px;  
 }
 
 .card-text {
